--- a/src/index.css
+++ b/src/index.css
@@ -10,19 +10,7 @@
   }
 }
 
-@utility no-scrollbar {
-  @layer utilities {
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    &::-webkit-scrollbar {
-      display: none;
-    }
-    /* Hide scrollbar for IE, Edge and Firefox */
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
-}
-
-@utility yes-scrollbar {
+/* @utility yes-scrollbar {
   @layer utilities {
     &::-webkit-scrollbar-track {
       border-radius: 10px;
@@ -45,7 +33,7 @@
       );
     }
   }
-}
+} */
 
 .yes-scrollbar::-webkit-scrollbar-track {
   border-radius: 10px;
@@ -63,11 +51,11 @@
   background: #fb2c36;
 }
 
-@utility shadow {
+/* @utility shadow {
   @layer utilities {
     box-shadow: -4px -12px 12px -2px rgba(0, 0, 0, 0.05) inset;
   }
-}
+} */
 
 @layer utilities {
   /* montserrat-latin-wght-normal */
@@ -96,6 +84,7 @@
 
 :root {
   font-family: "Montserrat Variable", sans-serif;
+  font-display: swap;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
